--- a/style.css
+++ b/style.css
@@ -1,21 +1,44 @@
 
 body{
+    text-align: center;
     background-color: rgb(91, 167, 131)
+    
 
 }
 
-h1{ color: ;
-    background-color: aqua;
+h1{
+    font-size: 400%;
+    color:#d5eb0f
+    
 
 }
-b{ 
+h2{
+    font-size: 400%;
+    color:#d5eb0f
+}
+b{
+     font-size: 500%;
     background-color: rgb(24, 194, 194)
 
 }
 
 p{
-    color: ;
-    background-color: rgb(0, 255, 55);
+    color: blue;
+    font-size: 150%; 
+    border-radius: 4px;
+}
+details{font-size: 250%;
+    color: #f6fa13;
+    
+}
+.burhan{
+    text-align: center;
+    text-transform: uppercase;
+    margin: 70px;
+    width: 80%;
+    background-color: #3cc421;
+    padding: 4px;
+    color:#eee5e5
 }
 
 .n{
@@ -26,4 +49,94 @@ p{
 .mm{
     background-color: aqua;
 
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.crud{
+    width: 80%;
+    margin: auto;
+
+}
+.head{
+    text-align: center;
+    text-transform: uppercase;
+    margin: 10px;
+
+}
+
+.body{
+    background-color: aquamarine;
+
+
+}
+input{
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border: none;
+    background-color: #111;
+    margin: 4px 0;
+    border-radius: 4px;
+    padding: 4px;
+    color:#eee5e5;
+
+}
+input:focus{
+    background-color: #383f31;
+    transform: scale(1.1);
+
+}
+.price input{
+    width: 20%;
+
+}
+#total{
+    background-color: rgb(218, 21, 96);
+    padding: 4px 2px;
+    border-radius: 4px;
+
+}
+#total::before{
+    content: 'Total: ';
+}
+button{
+    width: 100%;
+    height: 30px;
+    border: none;
+    cursor: pointer;
+    background-color: #470053;
+    color: #fff;
+    border-radius: 20px;
+
+}
+button:hover{
+    background-color: #ec1fc0;
+    letter-spacing: 2px;
+    
+    
+}
+
+.btnsearch{
+    display: flex;
+    justify-content: space-between;
+}
+.btnsearch button{
+    width: 45%;
+
+}
+table{
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
+    color: #f6fa13;
+}
+table th{
+    text-transform: uppercase;
+}
+td,td{
+    padding: 5px;
 }
